--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     </head>
     <body>
         <div style="margin-left: 5%;" id="container">
-            <input type="text" placeholder="Input first Interation"><br>
-            <input type="text" placeholder="Input Stop Condition"><br>
-            <input type="radio" name="size-it" value="0" checked>Last iteration<br>
-            <input type="radio" name="size-it" value="1">All iterations<br>
+            <input id="firstIt" type="text" placeholder="Input First Polygon"><br>
+            <small>This must be of the same size of the another polygons. The dots must be Numbers!</small><br>
+            <input id="stopCond" type="text" placeholder="Input Stop Condition"><br>
+            <input id="lastIt" type="radio" name="size-it" value="0" checked><label for="lastIt">Last iteration</label><br>
+            <input id="allIt" type="radio" name="size-it" value="1"><label for="allIt">All iterations</label><br>
             <small>If you want to use <i>Iteration</i>, use <strong>i</strong></small>
             <div id="inputs-container">
-                <input type="text" id="1-polygon" placeholder="1st polygon">
+                <input class="polygon" type="text" id="1-polygon" placeholder="Polygon"><br>
             </div><br>
-            <small>Ex: [[x1/2,y1/3],[x2*2,y2+10],[x3*(40/100),y3-(y1+y2)]]</small><br>
-            <small>first `[]` means the polygon, each `[]` inside polygon means dot. The number of dots determine the type of polygon.</small><br>
+            <small>Ex: [[(p.x1)/2,(p.y1)/3],[(p.x2)*2,(p.y2)+10],[(p.x3)*(40/100),(p.y3)-((p.y1)+(p.y2))]]</small><br>
+            <small>The first `[]` means the polygon, each `[]` inside polygon means dot. The number of dots determine the type of polygon. `p` is the object to access the preview value.</small><br>
             <button id="btn-input">Add new input</button>
             <br>
             <br>
             <button id="generate">Generate</button>
         </div>
+        <script src="generator.js"></script>
     </body>
 </html>
